<resources>
    <string name="app_name">Cyclotrack</string>
    <string name="action_settings">Settings</string>
    <string name="trip_summaries_fragment_label">Trip Summaries Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="zero">0.0</string>
    <string name="location_fix_obtained">Location fix obtained</string>
    <string name="trip_summary_image_description">Trip map or default image</string>
    <string name="trip_title_placeholder">Trip Title</string>
    <string name="time_placeholder">HH:mm</string>
    <string name="time_ago_placeholder">XX days ago</string>
    <string name="cyclotrack_summary_map_id">c2e079ebb492f6ef</string>
    <string name="start_label">START</string>
    <string name="pause_label">PAUSE</string>
    <string name="stop_label">STOP</string>
    <string name="resume_label">RESUME</string>
    <string name="label_placeholder">LABEL</string>
    <string name="start_dashboard_button_description">Touch this button to enter dashboard</string>
    <string name="action_cleanup">Cleanup</string>
...
    <string name="action_pause_trip_service">com.kvl.cyclotrack::action_pause_trip_service</string>
    <string name="action_resume_trip_service">com.kvl.cyclotrack::action_resume_trip_service</string>
    <string name="action_stop_trip_service">com.kvl.cyclotrack::action_stop_trip_service</string>
    <string name="action_shutdown_trip_service">com.kvl.cyclotrack::action_shutdown_trip_service</string>
    <string name="notification_channel_name_trip_in_progress">Ride in progress</string>
    <string name="gps_disabled_message">GPS disabled</string>
    <string name="initial_inspiring_message">Ready to start your first ride? Touch the bike button and let\'s get moving!</string>
    <string name="details_menu_title_sync">Sync</string>
    <string name="google_fit_sync_dialog_description">Sign in to Google Fit to sync your workouts. Data from your rides, including location, heart rate, speed, and cadence will be shared with Google and stored in Google Fit. Google Fit will store your rides in the journal and your rides will count toward your weekly goals. Your Google Fit height, weight, and resting heart rate will be used to esti
    <string name="google_fit_logout_dialog_message">You are about to logout from your Google Account and stop sharing data with Google. Your rides will no longer be synchronized with Google Fit.</string>
    <string name="details_menu_title_unsync">Unsync</string>
    <string name="useGoogleFitBiometricsDialog_title">Use Google Fit Biometrics</string>
    <string name="useGoogleFitBiometricsDialog_message">Enable this option to read height, weight, and resting heart rate data from Google Fit. If this option is disabled, the values stored in Cyclotrack will be used. Update this option at any time in biometrics settings.</string>
    <string name="preference_key_useAutoCircumference">useAutoCircumference</string>
    <string name="preference_key_bike_specs">preference_key_bike_specs</string>
    <string name="switch_preference_useAutoCircumference_description">Let Cyclotrack use GPS to calibrate circumference</string>
    <string name="preference_key_bike_mass">bike_mass</string>
    <string name="preferences_key_enable_analytics">preference_key_enable_analytics</string>
    <string name="preference_key_analytics_opt_in_presented">preference_key_analytics_opt_in_presented</string>
    <string name="preferences_display_app_version">preference_key_display_app_version</string>
    <string name="preference_key_advanced_preferences">preference_key_advanced_preferences</string>
    <string name="preferences_key_advanced_onboard_sensors">preferences_key_onboard_sensors</string>
    <string name="preferences_key_advanced_enable_google_fit_sync_biometrics">enable_gfit_sync_biometrics</string>
    <string name="preferences_key_advanced_enable_google_fit_resting_heart_rate">enable_google_fit_resting_heart_rate</string>
    <string name="preferences_key_advanced_use_vo2max_calorie_estimate">preferences_key_advanced_use_vo2max_calorie_estimate</string>
...
    <string name="preference_key_strava_access_expires_at">strava_access_expires_at</string>
    <string name="preference_key_strava_access_token">strava_access_token</string>
    <string name="remove_cyclotrack_data_from_google_fit_message">Remove Cyclotrack data from Google Fit</string>
    <string name="remove_cyclotrack_data_from_strava_message">Remove Cyclotrack data from Strava</string>
    <string name="preference_key_strava_next_sync_window">preference_key_strava_next_sync_window</string>
    <string name="preference_key_autopause_preferences">preference_key_autopause</string>
    <string name="preference_key_autopause_enable">preferences_key_autopause_enable</string>
    <string name="preference_key_autopause_pause_threshold">preference_key_autopause_pause_threshold</string>
    <string name="preference_key_autopause_resume_threshold">preference_key_autopause_resume_threshold</string>
    <string name="preference_key_autopause_speed_threshold">preference_key_autopause_speed_threshold</string>
    <string name="preference_key_autopause_manual_override">preferences_key_autopause_manual_override</string>
    <string name="seekbar_preference_autopause_pauseThreshold_title">Pause threshold</string>
    <string name="seekbar_preference_autopause_pauseThreshold_description">
...
