<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:measurement_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    tools:context=".TripInProgressFragment">

    <com.kvl.cyclotrack.MeasurementView
        android:id="@+id/measurement_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/tip_measurement_padding"
        app:layout_constraintBottom_toTopOf="@id/measurement_topLeft"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        measurement_view:textSize="60sp"
        measurement_view:autoShrinkText="false" />

    <com.kvl.cyclotrack.MeasurementView
        android:id="@+id/measurement_topLeft"
        android:layout_width="0dp"
        android:layout_marginHorizontal="@dimen/tip_measurement_padding"
        android:layout_height="wrap_content"
        measurement_view:autoShrinkText="true"
        app:layout_constraintBottom_toTopOf="@id/measurement_middleLeft"
        app:layout_constraintEnd_toStartOf="@id/measurement_topRight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/measurement_top" />

    <com.kvl.cyclotrack.MeasurementView
        android:id="@+id/measurement_topRight"
        android:layout_width="0dp"
        android:layout_marginHorizontal="@dimen/tip_measurement_padding"
        android:layout_height="wrap_content"
        measurement_view:autoShrinkText="true"
        app:layout_constraintBottom_toBottomOf="@id/measurement_topLeft"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/measurement_topLeft" />

    <com.kvl.cyclotrack.MeasurementView
        android:id="@+id/measurement_middleLeft"
        android:layout_width="0dp"
        android:layout_marginHorizontal="@dimen/tip_measurement_padding"
        android:layout_height="wrap_content"
        measurement_view:autoShrinkText="true"
        android:textAppearance="@style/DashboardFontAppearance"
        app:layout_constraintBottom_toTopOf="@id/measurement_bottomRight"
        app:layout_constraintEnd_toStartOf="@id/measurement_middleRight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/measurement_topLeft" />

    <com.kvl.cyclotrack.MeasurementView
        android:id="@+id/measurement_middleRight"
        android:layout_width="0dp"
        android:layout_marginHorizontal="@dimen/tip_measurement_padding"
        android:layout_height="wrap_content"
        measurement_view:autoShrinkText="true"
        android:text="@string/zero"
        android:textAppearance="@style/DashboardFontAppearance"
        app:layout_constraintBottom_toBottomOf="@id/measurement_middleLeft"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/measurement_middleLeft" />

    <com.kvl.cyclotrack.MeasurementView
        android:id="@+id/measurement_bottomLeft"
        android:layout_width="0dp"
        android:layout_marginHorizontal="@dimen/tip_measurement_padding"
        android:layout_height="wrap_content"
        measurement_view:autoShrinkText="true"
        android:textAppearance="@style/DashboardFontAppearance"
        app:layout_constraintBottom_toTopOf="@id/measurement_bottom"
        app:layout_constraintEnd_toStartOf="@+id/measurement_bottomRight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/measurement_middleRight" />

    <com.kvl.cyclotrack.MeasurementView
        android:id="@+id/measurement_bottomRight"
        android:layout_width="0dp"
        android:layout_marginHorizontal="@dimen/tip_measurement_padding"
        android:layout_height="wrap_content"
        measurement_view:autoShrinkText="true"
        android:textAppearance="@style/DashboardFontAppearance"
        app:layout_constraintBottom_toBottomOf="@id/measurement_bottomLeft"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/measurement_bottomLeft" />

    <ImageView
        android:id="@+id/image_tracking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/location_fix_obtained"
        android:src="@android:drawable/ic_menu_mylocation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_debug"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/orbitron_medium"
        android:text="@string/zero"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@id/image_tracking"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_tracking"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/measurement_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/orbitron_medium"
        android:textAppearance="@style/DashboardFontAppearance"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/compass_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="1dp"
        android:contentDescription="@string/bearing_icon_description"
        android:src="@drawable/baseline_explore_24"
        app:layout_constraintEnd_toStartOf="@id/measurement_bottom"
        app:layout_constraintBottom_toBottomOf="@id/measurement_bottom" />

    <Button
        android:id="@+id/pause_button"
        android:layout_width="match_parent"
        android:layout_height="0.9in"
        android:fontFamily="@font/orbitron_medium"
        android:text="@string/pause_label"
        android:textColor="#FFFFFF"
        android:textSize="0.2in"
        android:maxLines="1"
        android:ellipsize="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/stop_button"
        android:layout_width="0dp"
        android:layout_height="0.9in"
        android:fontFamily="@font/orbitron_medium"
        android:text="@string/stop_label"
        android:textColor="#FFFFFF"
        android:textSize="0.2in"
        android:maxLines="1"
        android:ellipsize="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/resume_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/resume_button"
        android:layout_width="0dp"
        android:layout_height="0.9in"
        android:fontFamily="@font/orbitron_medium"
        android:text="@string/resume_label"
        android:textAppearance="@style/DashboardFontAppearance"
        android:textColor="#FFFFFF"
        android:textSize="0.2in"
        android:maxLines="1"
        android:ellipsize="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/stop_button" />

</androidx.constraintlayout.widget.ConstraintLayout>