<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

    <TextView
        android:id="@+id/rollup_view_total_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize='42sp'
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/rollup_view_total_duration" />

    <TextView
        android:id="@+id/rollup_view_total_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize='42sp'
        app:layout_constraintTop_toBottomOf="@id/rollup_view_total_distance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/rollup_view_inspiring_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize='24sp'
        android:layout_marginTop="24dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rollup_view_total_duration" />
</merge>
