...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/AllDataFragment"
        android:name="com.kvl.cyclotrack.AllDataFragment"
        android:label="Debug"
        tools:layout="@layout/fragment_all_data">

        <action
            android:id="@+id/action_back_to_dashboard"
            app:destination="@id/LiveDataFragment" />
    </fragment>
...
